--- a/raw_train_data_validation/Dockerfile
+++ b/raw_train_data_validation/Dockerfile
@@ -1,8 +1,6 @@
-FROM python:3.7-slim-bullseye
+FROM public.ecr.aws/lambda/python:3.8
 
-WORKDIR /app
-
-COPY . /app
+COPY . .
 
 ARG AWS_ACCESS_KEY_ID
 
@@ -16,6 +14,6 @@ ENV AWS_SECRET_ACCESS_KEY $AWS_SECRET_ACCESS_KEY
 
 ENV AWS_DEFAULT_REGION $AWS_DEFAULT_REGION
 
-RUN pip install -r requirements.txt
+RUN python3.8 -m pip install -r requirements.txt -t .
 
-CMD [ "python3","run.py" ]
+CMD ["run.lambda_handler"]
