--- a/raw_train_data_validation/Dockerfile
+++ b/raw_train_data_validation/Dockerfile
@@ -1,6 +1,8 @@
-FROM public.ecr.aws/lambda/python:3.8
+FROM python:3.7-slim-bullseye
 
-COPY . .
+WORKDIR /app
+
+COPY . /app
 
 ARG AWS_ACCESS_KEY_ID
 
@@ -14,6 +16,6 @@ ENV AWS_SECRET_ACCESS_KEY $AWS_SECRET_ACCESS_KEY
 
 ENV AWS_DEFAULT_REGION $AWS_DEFAULT_REGION
 
-RUN python3.8 -m pip install -r requirements.txt -t .
+RUN pip3 install -r requirements.txt 
 
-CMD ["run.lambda_handler"]
+CMD ["python3","run.py"]
