--- a/model_training/Dockerfile
+++ b/model_training/Dockerfile
@@ -1,33 +1,7 @@
-FROM python:3.7-slim-bullseye
+FROM public.ecr.aws/lambda/python:3.8
 
-WORKDIR /app
+COPY . .
 
-COPY . /app
+RUN pip3 install -r requirements.txt 
 
-ARG AWS_ACCESS_KEY_ID
-
-ARG AWS_SECRET_ACCESS_KEY
-
-ARG AWS_DEFAULT_REGION
-
-ARG MLFLOW_TRACKING_URI
-
-ARG MLFLOW_TRACKING_USERNAME
-
-ARG MLFLOW_TRACKING_PASSWORD
-
-ENV AWS_ACCESS_KEY_ID $AWS_ACCESS_KEY_ID
-
-ENV AWS_SECRET_ACCESS_KEY $AWS_SECRET_ACCESS_KEY
-
-ENV AWS_DEFAULT_REGION $AWS_DEFAULT_REGION
-
-ENV MLFLOW_TRACKING_URI $MLFLOW_TRACKING_URI
-
-ENV MLFLOW_TRACKING_USERNAME $MLFLOW_TRACKING_USERNAME
-
-ENV MLFLOW_TRACKING_PASSWORD $MLFLOW_TRACKING_PASSWORD
-
-RUN pip install -r requirements.txt
-
-CMD ["python3","run.py"]
+CMD ["run.lambda_handler"]
